--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,1 +1,13 @@
 <h1>Header</h1>
+
+<ul>
+  <% if(locals.user) {%>
+  <li>
+    <a href="/users/profile"><%= user.name%></a>
+  </li>
+  <li><a href="/users/sign-out">Sign Out</a></li>
+  <% } else {%>
+  <li><a href="/users/sign-in">Sign In</a></li>
+  <li><a href="/users/sign-up">Sign Up</a></li>
+  <%}%>
+</ul>
