--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>Setup social media app directory structure</h1>
+    <section id="feed-posts">
+      <h4>Posts</h4>
+      <form action="" id="new-post-form" method="POST">
+        <textarea name="content" cols="30" rows="10"></textarea>
+        <input type="submit" value="POST" />
+      </form>
+    </section>
   </body>
 </html>
