--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,10 +9,55 @@
     <h1>Setup social media app directory structure</h1>
     <section id="feed-posts">
       <h4>Posts</h4>
-      <form action="" id="new-post-form" method="POST">
-        <textarea name="content" cols="30" rows="10"></textarea>
+      <% if(locals.user) {%>
+      <form action="/posts/create" id="new-post-form" method="POST">
+        <textarea
+          name="content"
+          cols="30"
+          rows="10"
+          placeholder="Type Here..."
+        ></textarea>
+        <br />
         <input type="submit" value="POST" />
       </form>
+      <%}%>
     </section>
+    <div id="post-list-container">
+      <ul>
+        <% for(post of posts) {%>
+        <li>
+          <p>
+            <%= post.content %> <br />
+            <%= post.user.name %>
+          </p>
+          <div class="post-comments">
+            <% if(locals.user) {%>
+            <form action="/comments/create" method="POST">
+              <input
+                type="text"
+                name="content"
+                placeholder="Type here to add comment..."
+                required
+              />
+              <input type="hidden" name="post" value="<%= post._id%>" />
+              <input type="submit" value="Add Comment" />
+            </form>
+            <%}%>
+          </div>
+          <div class="post-comments-list">
+            <ul id="post-comments-<%= post._id%>">
+              <% for (comment of post.comments) {%>
+              <p>
+                <%= comment.content%><br /><small
+                  ><%= comment.user.name%></small
+                >
+              </p>
+              <%}%>
+            </ul>
+          </div>
+        </li>
+        <%}%>
+      </ul>
+    </div>
   </body>
 </html>
