--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,11 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title><%= title%></title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/layout.css" />
     <%- style %>
   </head>
   <body>
     <%- include('_header')%> <%- body %> <%- include('_footer')%> <%- script %>
+
+    <script>
+      <% if (flash.success && flash.success.length > 0) { %>
+        new Noty({
+          theme: "ralax",
+          text: "<%= flash.success %>",
+          type: "success",
+          layout: "topRight",
+          timeout: 1500,
+        }).show();
+        <%}%>
+    </script>
   </body>
 </html>
