--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,6 +1,10 @@
-<h1>Sign in</h1>
-<form action="/users/create-session" method="POST">
-  <input type="email" name="email" placeholder="Enter Email" />
-  <input type="password" name="password" placeholder="Enter Password" />
-  <input type="submit" value="Sign In" />
-</form>
+<section class="user-form-section">
+  <div class="main-heading">
+    <h1>Sign in</h1>
+  </div>
+  <form action="/users/create-session" method="POST" class="form-box">
+    <input type="email" name="email" placeholder="Enter Email" />
+    <input type="password" name="password" placeholder="Enter Password" />
+    <input type="submit" value="Sign In" class="btn btn-submit" />
+  </form>
+</section>
