--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,29 +1,32 @@
-<h1>Setup social media app directory structure</h1>
-<section id="feed-posts">
-  <h4>Posts</h4>
-  <% if(locals.user) {%>
-  <form action="/posts/create" id="new-post-form" method="POST">
-    <textarea
-      name="content"
-      cols="30"
-      rows="10"
-      placeholder="Type Here..."
-    ></textarea>
-    <br />
-    <input type="submit" value="POST" />
-  </form>
-  <%}%>
-</section>
-<div id="post-list-container">
-  <ul>
-    <% for(post of posts) {%> <%- include('_posts')-%> <%}%>
-  </ul>
+<div class="container-fluid main-section">
+  <div class="container">
+    <section id="feed-posts">
+      <h4>Posts</h4>
+      <% if(locals.user) {%>
+      <form action="/posts/create" id="new-post-form" method="POST">
+        <textarea
+          name="content"
+          cols="15"
+          rows="4"
+          placeholder="Type Here..."
+        ></textarea>
+        <br />
+        <input type="submit" value="POST" class="btn btn-submit" />
+      </form>
+      <%}%>
+    </section>
+    <div id="post-list-container">
+      <ul>
+        <% for(post of posts) {%> <%- include('_posts')-%> <%}%>
+      </ul>
+    </div>
+  </div>
+  <section id="user-friends">
+    <h4>Friends</h4>
+    <% for(u of all_users) {%>
+    <p><a href="/users/profile/<%= u.id  %>"><%= u.name %></a></p>
+    <%}%>
+  </section>
 </div>
-<section id="user-friends">
-  <h4>Friends</h4>
-  <% for(u of all_users) {%>
-  <p><a href="/users/profile/<%= u.id  %>"><%= u.name %></a></p>
-  <%}%>
-</section>
-
+<script src="/js/comment.js"></script>
 <script src="/js/home_posts.js"></script>
